# Dissertation

./: .gitignore
C++/Camera Calibration/: CMakeLists.txt
C++/Camera Calibration/src/: main.cpp
Python Scripts/: 3d_plot.py  apply_mask.py  camera_calibration.py  cr2_to_png.py  detect_aruco_marker_type.py  directions.txt  generate_charuco_board.py  light_directions.py  light_directions.txt  prep.py  transformed_light_directions.txt
